--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "firebase": "^9.9.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-hot-toast": "^2.3.0",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "styled-components": "^5.3.3",
