--- a/package.json
+++ b/package.json
@@ -3,12 +3,13 @@
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
-		"@emotion/react": "^11.9.0",
-		"@emotion/styled": "^11.8.1",
-		"@mui/icons-material": "^5.6.0",
-		"@mui/material": "^5.6.0",
-		"@mui/styles": "^5.6.0",
-		"@mui/system": "^5.6.0",
+		"@emotion/react": "^11.10.5",
+		"@emotion/styled": "^11.10.5",
+		"@mui/icons-material": "^5.10.16",
+		"@mui/lab": "^5.0.0-alpha.110",
+		"@mui/material": "^5.10.16",
+		"@mui/styles": "^5.10.16",
+		"@mui/system": "^5.10.16",
 		"@testing-library/jest-dom": "^5.16.2",
 		"@testing-library/react": "^12.1.2",
 		"@testing-library/user-event": "^13.5.0",
